<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.huawei.hms.nearby.beacondemo.common.MainActivity">

    <TextView
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/soft_title"
        android:textAllCaps="false"
        android:textColor="@color/translucent_black_25"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/soft_info"
        android:textAllCaps="false"
        android:textColor="@color/translucent_black_25"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/btn_remote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/soft_close"
        android:textAllCaps="false"
        android:textColor="@color/color_round_dark_blue"
        android:textSize="14sp"
        android:layout_marginBottom="5dp"/>

</LinearLayout>
