<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".ui.MerchantsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_beacon_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/beacon_phone"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btn_set_soft_beacon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@+id/beacon_switch"
            android:background="@drawable/shapecircle_set_soft"
            android:text="Set"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="12sp" />

        <Switch
            android:id="@+id/beacon_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:switchMinWidth="20dp"
            android:thumb="@drawable/thumb"
            android:track="@drawable/track" />

        <TextView
            android:id="@+id/tv_beacon_unregister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_beacon_phone"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/beacon_unregister"
            android:textColor="@color/unregister"
            android:textSize="12sp" />

        <RelativeLayout
            android:id="@+id/rl_beacons_unregister"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@+id/tv_beacon_unregister"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bg_beacon_unregister">

            <TextView
                android:id="@+id/beacon_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/beacon_id"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/beacon_status"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <View
                android:id="@+id/dividing_line"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/beacon_id"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:background="@color/colorAccent" />

            <TextView
                android:id="@+id/tv_nearbyBeacon_unregister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:text="@string/no_beacon_found"
                android:visibility="visible" />

            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/refreshLayout_unregister"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/dividing_line"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp">

                <ListView
                    android:id="@+id/lv_nearby_beacons_unregister"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_beacon_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_beacons_unregister"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/beacon_register"
            android:textColor="@color/register"
            android:textSize="12sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@+id/tv_beacon_register"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bg_beacon_register">

            <TextView
                android:id="@+id/beacon_id_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/beacon_id"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/beacon_status"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <View
                android:id="@+id/dividing_line_register"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/beacon_id_register"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:background="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/tv_nearbyBeacon_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:text="@string/no_beacon_found"
                android:visibility="visible" />

            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/refreshLayout_register"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/dividing_line_register"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp">

                <ListView
                    android:id="@+id/lv_nearby_beacons_register"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
        </RelativeLayout>
    </RelativeLayout>


</ScrollView>
